Fixed layout issues

--- a/src/contacts/Contacts.module.css
+++ b/src/contacts/Contacts.module.css
@@ -1,5 +1,5 @@
 .contactsBlock {
-    height: 100vh;
+    height: 50vh;
     background: darkslategrey;
 }
 
@@ -13,22 +13,22 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 10px;
-    width: 70%;
+    width: 80%;
     align-items: center;
 }
 
 .firstInput {
     margin-bottom: 10px;
-    width: 80%;
+    width: 100%;
 }
 
 .secondInput {
     margin-bottom: 10px;
-    width: 80%;
+    width: 100%;
 }
 
 .textarea {
-    width: 80%;
-    height: 20vh;
+    width: 100%;
+    height: 80%;
     resize: none;
 }
