--- a/src/nav/Nav.module.css
+++ b/src/nav/Nav.module.css
@@ -3,4 +3,5 @@
     width: 300px;
     display: flex;
     justify-content: space-between;
+    margin-right: 30px;
 }
