--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -1,5 +1,5 @@
 .projectsBlock {
-    height: 100vh;
+    min-height: 80vh;
     background: #6682a1;
 }
 .projectsContainer {
