--- a/src/projects/project/Project.module.css
+++ b/src/projects/project/Project.module.css
@@ -16,10 +16,17 @@
 
 .imgContainer {
     width: 100%;
-
+    position: relative;
 }
 
 .projectPicture {
     height: 100%;
     width: 100%;
+}
+.viewButton {
+    background: yellow;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
